--- a/app/src/main/res/layout/activity_nova_viagem.xml
+++ b/app/src/main/res/layout/activity_nova_viagem.xml
@@ -6,9 +6,132 @@
     android:layout_margin="30dp"
     tools:context=".NovaViagem">
 
-    <TextView
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Nova viagem" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="20dp">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="fill_horizontal">
+
+            <EditText
+                android:id="@+id/destino"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:gravity="start"
+                android:background="#DFDCDC"
+                android:textColor="#959595"
+                android:padding="10dp"
+                android:hint="Destino"
+                android:inputType="text"
+                android:textColorHint="#959595" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="fill_horizontal">
+
+            <EditText
+                android:id="@+id/tipo_viagem"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:gravity="start"
+                android:background="#DFDCDC"
+                android:textColor="#959595"
+                android:padding="10dp"
+                android:hint="Lazer"
+                android:inputType="textMultiLine"
+                android:textColorHint="#959595" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="fill_horizontal">
+
+            <EditText
+                android:id="@+id/chegada_viagem"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:gravity="start"
+                android:background="#DFDCDC"
+                android:textColor="#959595"
+                android:padding="10dp"
+                android:hint="Chegada"
+                android:inputType="date"
+                android:textColorHint="#959595" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="fill_horizontal">
+
+            <EditText
+                android:id="@+id/partida_viagem"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:gravity="start"
+                android:background="#DFDCDC"
+                android:textColor="#959595"
+                android:padding="10dp"
+                android:hint="Partida"
+                android:inputType="date"
+                android:textColorHint="#959595" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="fill_horizontal">
+
+            <EditText
+                android:id="@+id/orcamento_viagem"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:gravity="start"
+                android:background="#DFDCDC"
+                android:textColor="#959595"
+                android:padding="10dp"
+                android:hint="Orçamento"
+                android:inputType="numberDecimal"
+                android:textColorHint="#959595" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:gravity="fill_horizontal">
+
+            <Button
+                android:id="@+id/salvar_nova_viagem"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:onClick="salvar_nova_viagem"
+                android:text="Salvar"/>
+        </TableRow>
+    </TableLayout>
 
 </FrameLayout>
