--- a/app/src/main/res/layout/activity_nova_viagem.xml
+++ b/app/src/main/res/layout/activity_nova_viagem.xml
@@ -6,132 +6,169 @@
     android:layout_margin="30dp"
     tools:context=".NovaViagem">
 
-    <TableLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="20dp">
+        android:layout_height="match_parent">
 
-        <TableRow
+        <TextView
+            android:id="@+id/id_usuario_nova_viagem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="fill_horizontal">
+            android:textColor="@color/white"/>
 
-            <EditText
-                android:id="@+id/destino"
-                android:layout_width="0dp"
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="20dp">
+
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="25sp"
-                android:gravity="start"
-                android:background="#DFDCDC"
-                android:textColor="#959595"
-                android:padding="10dp"
-                android:hint="Destino"
-                android:inputType="text"
-                android:textColorHint="#959595" />
-        </TableRow>
+                android:layout_marginTop="20dp"
+                android:gravity="fill_horizontal">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="fill_horizontal">
+                <EditText
+                    android:id="@+id/destino"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="25sp"
+                    android:gravity="start"
+                    android:background="#DFDCDC"
+                    android:textColor="#0C0C0C"
+                    android:padding="10dp"
+                    android:hint="Destino"
+                    android:inputType="text"
+                    android:textColorHint="#0C0C0C" />
+            </TableRow>
 
-            <EditText
-                android:id="@+id/tipo_viagem"
-                android:layout_width="0dp"
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="25sp"
-                android:gravity="start"
-                android:background="#DFDCDC"
-                android:textColor="#959595"
-                android:padding="10dp"
-                android:hint="Lazer"
-                android:inputType="textMultiLine"
-                android:textColorHint="#959595" />
-        </TableRow>
+                android:layout_marginTop="10dp"
+                android:gravity="fill_horizontal">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="fill_horizontal">
+                <Spinner
+                    android:id="@+id/spinner_tipo_viagem"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textSize="40sp"
+                    android:gravity="start"
+                    android:background="#DFDCDC"
+                    android:textColor="#959595"
+                    android:padding="15dp"
+                    android:spinnerMode="dropdown"
+                    android:popupBackground="#959595"
+                    android:prompt="@string/tipo_viagem_prompt"
+                    android:entries="@array/tipo_viagem_arrays"/>
+            </TableRow>
 
-            <EditText
-                android:id="@+id/chegada_viagem"
-                android:layout_width="0dp"
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="25sp"
-                android:gravity="start"
-                android:background="#DFDCDC"
-                android:textColor="#959595"
-                android:padding="10dp"
-                android:hint="Chegada"
-                android:inputType="date"
-                android:textColorHint="#959595" />
-        </TableRow>
+                android:layout_marginTop="10dp"
+                android:gravity="fill_horizontal">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="fill_horizontal">
+                <TextView
+                    android:id="@+id/chegada"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="25sp"
+                    android:gravity="start"
+                    android:background="#DFDCDC"
+                    android:textColor="#0C0C0C"
+                    android:padding="10dp"
+                    android:text="Data de Chegada"
+                    android:textColorHint="#0C0C0C" />
+            </TableRow>
 
-            <EditText
-                android:id="@+id/partida_viagem"
-                android:layout_width="0dp"
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="25sp"
-                android:gravity="start"
-                android:background="#DFDCDC"
-                android:textColor="#959595"
-                android:padding="10dp"
-                android:hint="Partida"
-                android:inputType="date"
-                android:textColorHint="#959595" />
-        </TableRow>
+                android:gravity="fill_horizontal">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="fill_horizontal">
+                <DatePicker
+                    android:id="@+id/data_picker_chegada"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner" />
+            </TableRow>
 
-            <EditText
-                android:id="@+id/orcamento_viagem"
-                android:layout_width="0dp"
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="25sp"
-                android:gravity="start"
-                android:background="#DFDCDC"
-                android:textColor="#959595"
-                android:padding="10dp"
-                android:hint="Orçamento"
-                android:inputType="numberDecimal"
-                android:textColorHint="#959595" />
-        </TableRow>
+                android:layout_marginTop="10dp"
+                android:gravity="fill_horizontal">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:gravity="fill_horizontal">
+                <TextView
+                    android:id="@+id/partida_viagem"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="25sp"
+                    android:gravity="start"
+                    android:background="#DFDCDC"
+                    android:textColor="#0C0C0C"
+                    android:padding="10dp"
+                    android:text="Data de Partida"
+                    android:textColorHint="#0C0C0C" />
+            </TableRow>
 
-            <Button
-                android:id="@+id/salvar_nova_viagem"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textSize="25sp"
-                android:onClick="salvar_nova_viagem"
-                android:text="Salvar"/>
-        </TableRow>
-    </TableLayout>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="fill_horizontal">
+
+                <DatePicker
+                    android:id="@+id/data_picker_partida"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="fill_horizontal">
+
+                <EditText
+                    android:id="@+id/orcamento_viagem"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="25sp"
+                    android:gravity="start"
+                    android:background="#DFDCDC"
+                    android:textColor="#0C0C0C"
+                    android:padding="10dp"
+                    android:hint="Orçamento"
+                    android:inputType="numberDecimal"
+                    android:textColorHint="#0C0C0C" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="fill_horizontal">
+
+                <Button
+                    android:id="@+id/salvar_nova_viagem"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="25sp"
+                    android:onClick="salvar_nova_viagem"
+                    android:text="Salvar"/>
+            </TableRow>
+        </TableLayout>
+
+    </ScrollView>
 
 </FrameLayout>
