--- a/app/src/main/res/layout/activity_novo_gasto.xml
+++ b/app/src/main/res/layout/activity_novo_gasto.xml
@@ -3,12 +3,166 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="30dp"
+    android:layout_margin="10dp"
+    android:orientation="vertical"
     tools:context=".NovoGasto">
 
     <TextView
+        android:id="@+id/id_usuario_novo_gasto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white" />
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Novo gasto" />
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbarSize="@android:dimen/thumbnail_height">
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="fill_horizontal">
+
+                <EditText
+                    android:id="@+id/valor"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#DFDCDC"
+                    android:gravity="start"
+                    android:hint="Valor"
+                    android:inputType="numberDecimal"
+                    android:padding="10dp"
+                    android:textColor="#0C0C0C"
+                    android:textColorHint="#0C0C0C"
+                    android:textSize="25sp"
+                    android:autofillHints="" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="fill_horizontal">
+
+                <TextView
+                    android:id="@+id/data_gasto"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="25sp"
+                    android:gravity="start"
+                    android:background="#DFDCDC"
+                    android:textColor="#0C0C0C"
+                    android:padding="10dp"
+                    android:text="Data do Gasto"
+                    android:textColorHint="#0C0C0C" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="fill_horizontal">
+
+                <DatePicker
+                    android:id="@+id/data_picker_gasto"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="fill_horizontal">
+
+                <EditText
+                    android:id="@+id/descricao"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#DFDCDC"
+                    android:gravity="start"
+                    android:hint="Descrição"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:textColor="#0C0C0C"
+                    android:textColorHint="#0C0C0C"
+                    android:textSize="25sp"
+                    android:autofillHints="" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="fill_horizontal">
+
+                <EditText
+                    android:id="@+id/local_gasto"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#DFDCDC"
+                    android:gravity="start"
+                    android:hint="Local"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:textColor="#0C0C0C"
+                    android:textColorHint="#0C0C0C"
+                    android:textSize="25sp"
+                    android:autofillHints="" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="fill_horizontal">
+
+                <Spinner
+                    android:id="@+id/spinner_tipo_gasto"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="#DFDCDC"
+                    android:entries="@array/tipo_gasto_arrays"
+                    android:gravity="start"
+                    android:padding="15dp"
+                    android:popupBackground="#959595"
+                    android:prompt="@string/tipo_gasto_prompt"
+                    android:spinnerMode="dropdown"
+                    android:textColor="#959595"
+                    android:textSize="40sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="fill_horizontal">
+
+                <Button
+                    android:id="@+id/salvar_novo_gasto"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="25sp"
+                    android:text="Salvar"/>
+<!--                    android:onClick="salvar_novo_gasto"/>-->
+            </TableRow>
+
+        </TableLayout>
+
+    </ScrollView>
 
 </FrameLayout>
