Adicionando uuid, ajustando data da viagem, e outros ajustes pequenos

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:shrinkColumns="*"
     android:stretchColumns="*"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".view.LoginActivity">
 
     <TableLayout
         android:layout_width="match_parent"
