--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#93C8B8"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
 
     <ImageView
