--- a/app/src/main/res/layout/activity_novo_gasto.xml
+++ b/app/src/main/res/layout/activity_novo_gasto.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical"
-    tools:context=".NovoGasto">
+    tools:context=".view.NovoGasto">
 
     <ScrollView
         android:layout_width="match_parent"
