--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:shrinkColumns="*"
     android:stretchColumns="*"
     android:orientation="vertical"
-    tools:context=".RegisterActivity">
+    tools:context=".view.RegisterActivity">
 
     <TableLayout
         android:layout_width="match_parent"
