--- a/app/src/main/res/layout/activity_nova_viagem.xml
+++ b/app/src/main/res/layout/activity_nova_viagem.xml
@@ -28,13 +28,12 @@
                     android:layout_weight="1"
                     android:textSize="15sp"
                     android:gravity="start"
-                    android:background="#DFDCDC"
+                    android:background="#EDEDED"
                     android:textColor="#0C0C0C"
                     android:padding="10dp"
                     android:hint="Destino"
                     android:inputType="text"
-                    android:textColorHint="#0C0C0C"
-                    android:autofillHints="" />
+                    android:textColorHint="#939292" />
             </TableRow>
 
             <TableRow
@@ -43,20 +42,19 @@
                 android:layout_marginTop="10dp"
                 android:gravity="fill_horizontal">
 
-                <Spinner
-                    android:id="@+id/spinner_tipo_viagem"
+                <EditText
+                    android:id="@+id/tipo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:textSize="40sp"
+                    android:layout_weight="1"
+                    android:textSize="15sp"
                     android:gravity="start"
-                    android:background="#DFDCDC"
-                    android:textColor="#959595"
+                    android:background="#EDEDED"
+                    android:textColor="#0C0C0C"
                     android:padding="10dp"
-                    android:spinnerMode="dropdown"
-                    android:popupBackground="#959595"
-                    android:prompt="@string/tipo_viagem_prompt"
-                    android:entries="@array/tipo_viagem_arrays"/>
+                    android:hint="Tipo de Viagem"
+                    android:inputType="text"
+                    android:textColorHint="#939292"/>
             </TableRow>
 
             <TableRow
@@ -67,22 +65,14 @@
 
                 <TextView
                     android:id="@+id/chegada"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:textSize="15sp"
-                    android:gravity="start"
-                    android:background="#DFDCDC"
-                    android:textColor="#0C0C0C"
+                    android:gravity="center"
+                    android:textColor="#939292"
                     android:padding="10dp"
-                    android:text="Data de Chegada"
-                    android:textColorHint="#0C0C0C" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="fill_horizontal">
+                    android:text="Data de Chegada"/>
 
                 <DatePicker
                     android:id="@+id/data_picker_chegada"
@@ -100,22 +90,14 @@
 
                 <TextView
                     android:id="@+id/partida_viagem"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:textSize="15sp"
-                    android:gravity="start"
-                    android:background="#DFDCDC"
-                    android:textColor="#0C0C0C"
+                    android:gravity="center"
+                    android:textColor="#939292"
                     android:padding="10dp"
-                    android:text="Data de Partida"
-                    android:textColorHint="#0C0C0C" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="fill_horizontal">
+                    android:text="Data de Partida" />
 
                 <DatePicker
                     android:id="@+id/data_picker_partida"
@@ -138,12 +120,12 @@
                     android:layout_weight="1"
                     android:textSize="15sp"
                     android:gravity="start"
-                    android:background="#DFDCDC"
+                    android:background="#EDEDED"
                     android:textColor="#0C0C0C"
                     android:padding="10dp"
                     android:hint="Orçamento"
                     android:inputType="numberDecimal"
-                    android:textColorHint="#0C0C0C"
+                    android:textColorHint="#939292"
                     android:autofillHints="" />
             </TableRow>
 
