--- a/app/src/main/res/layout/activity_editar_viagens.xml
+++ b/app/src/main/res/layout/activity_editar_viagens.xml
@@ -22,7 +22,7 @@
                 android:gravity="fill_horizontal">
 
                 <EditText
-                    android:id="@+id/destino"
+                    android:id="@+id/destino_viagem"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -31,9 +31,8 @@
                     android:background="#EDEDED"
                     android:textColor="#0C0C0C"
                     android:padding="10dp"
-                    android:hint="Destino"
-                    android:inputType="text"
-                    android:textColorHint="#939292" />
+                    android:text=""
+                    android:inputType="text" />
             </TableRow>
 
             <TableRow
@@ -43,7 +42,7 @@
                 android:gravity="fill_horizontal">
 
                 <EditText
-                    android:id="@+id/tipo"
+                    android:id="@+id/tipo_viagem"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -52,9 +51,8 @@
                     android:background="#EDEDED"
                     android:textColor="#0C0C0C"
                     android:padding="10dp"
-                    android:hint="Tipo (Lazer ou Negócio)"
-                    android:inputType="text"
-                    android:textColorHint="#939292"/>
+                    android:text=""
+                    android:inputType="text"/>
             </TableRow>
 
             <TableRow
@@ -63,48 +61,38 @@
                 android:layout_marginTop="10dp"
                 android:gravity="fill_horizontal">
 
-                <TextView
-                    android:id="@+id/chegada"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                <EditText
+                    android:id="@+id/data_chegada"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="15sp"
-                    android:gravity="center"
-                    android:textColor="#939292"
+                    android:gravity="start"
+                    android:background="#EDEDED"
+                    android:textColor="#0C0C0C"
                     android:padding="10dp"
-                    android:text="Data de Chegada"/>
-
-                <DatePicker
-                    android:id="@+id/data_picker_chegada"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:calendarViewShown="false"
-                    android:datePickerMode="spinner" />
+                    android:text=""
+                    android:inputType="text" />
             </TableRow>
 
-            <TableRow
+             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:gravity="fill_horizontal">
 
-                <TextView
-                    android:id="@+id/partida_viagem"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                <EditText
+                    android:id="@+id/data_partida"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="15sp"
-                    android:gravity="center"
-                    android:textColor="#939292"
+                    android:gravity="start"
+                    android:background="#EDEDED"
+                    android:textColor="#0C0C0C"
                     android:padding="10dp"
-                    android:text="Data de Partida" />
-
-                <DatePicker
-                    android:id="@+id/data_picker_partida"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:calendarViewShown="false"
-                    android:datePickerMode="spinner" />
+                    android:text=""
+                    android:inputType="text" />
             </TableRow>
 
             <TableRow
@@ -123,10 +111,8 @@
                     android:background="#EDEDED"
                     android:textColor="#0C0C0C"
                     android:padding="10dp"
-                    android:hint="Orçamento"
-                    android:inputType="numberDecimal"
-                    android:textColorHint="#939292"
-                    android:autofillHints="" />
+                    android:text=""
+                    android:inputType="text" />
             </TableRow>
 
             <TableRow
@@ -140,8 +126,42 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textSize="25sp"
-                    android:text="Salvar"/>
+                    android:textSize="18sp"
+                    android:layout_margin="2dp"
+                    android:text="@string/salvar"/>
+                <Button
+                    android:id="@+id/deletar_nova_viagem"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:layout_margin="2dp"
+                    android:text="@string/deletar"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="fill_horizontal">
+
+                <Button
+                    android:id="@+id/listar_gastos"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:layout_margin="2dp"
+                    android:text="@string/gastos"/>
+
+                <Button
+                    android:id="@+id/voltar"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:layout_margin="2dp"
+                    android:text="@string/voltar"/>
             </TableRow>
         </TableLayout>
 
