--- a/app/src/main/res/layout/item_gastos.xml
+++ b/app/src/main/res/layout/item_gastos.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:columnCount="3"
+        android:columnCount="2"
         android:padding="10dp">
 
 
@@ -17,17 +17,18 @@
             android:id="@+id/descricao_gasto_salvo"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_column="1"
+            android:layout_column="0"
             android:layout_row="1"
             android:gravity="start"
+            android:padding="5dp"
             android:text="@string/descri_o" />
 
         <TextView
             android:id="@+id/text_descricao_gasto"
-            android:layout_width="234dp"
-            android:layout_height="match_parent"
-            android:layout_column="2"
+            android:layout_width="297dp"
+            android:layout_height="wrap_content"
             android:layout_row="1"
+            android:layout_column="1"
             android:gravity="start" />
 
 
@@ -37,15 +38,16 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_row="2"
-            android:layout_column="1"
+            android:layout_column="0"
             android:gravity="start"
+            android:padding="5dp"
             android:text="@string/valor" />
 
         <TextView
             android:id="@+id/text_valor_gasto"
             android:layout_width="234dp"
             android:layout_height="match_parent"
-            android:layout_column="2"
+            android:layout_column="1"
             android:layout_row="2"
             android:gravity="start"/>
 
