--- a/app/src/main/res/layout/item_viagem.xml
+++ b/app/src/main/res/layout/item_viagem.xml
@@ -28,6 +28,7 @@
             android:layout_column="1"
             android:layout_row="1"
             android:gravity="start"
+            android:padding="5dp"
             android:text="@string/tipo" />
 
         <TextView
@@ -47,6 +48,7 @@
             android:layout_row="2"
             android:layout_column="1"
             android:gravity="start"
+            android:padding="5dp"
             android:text="@string/destino" />
 
         <TextView
@@ -65,6 +67,7 @@
             android:layout_row="3"
             android:layout_column="1"
             android:gravity="start"
+            android:padding="5dp"
             android:text="@string/data_chegada"/>
 
         <TextView
