--- a/app/src/main/res/layout/activity_lista_gastos.xml
+++ b/app/src/main/res/layout/activity_lista_gastos.xml
@@ -20,19 +20,20 @@
         android:id="@+id/adicionar_gasto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:textSize="18sp"
         android:text="@string/adicionar_gasto"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/lista_gastos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
     </ScrollView>
+
 
 </FrameLayout>
